--- a/src/styles/Advantages.module.scss
+++ b/src/styles/Advantages.module.scss
@@ -69,3 +69,100 @@
     }
   }
 }
+
+@media (max-width: 1900px) {
+  .wrapper {
+    width: 100%;
+    height: 725px;
+    &__container {
+      width: 1520px;
+    }
+  }
+}
+@media (max-width: 1580px) {
+  .wrapper {
+    width: 100%;
+    height: auto;
+    &__container {
+      width: 1220px;
+      height: auto;
+      .container__grid{
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+      }
+    }
+  }
+}
+@media (max-width: 1280px) {
+  .wrapper {
+    width: 100%;
+    height: auto;
+    &__container {
+      width: 1020px;
+      height: auto;
+      .container__grid{
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+      }
+    }
+  }
+}
+@media (max-width: 1080px) {
+  .wrapper {
+    width: 100%;
+    height: auto;
+    &__container {
+      width: 820px;
+      height: auto;
+      .container__grid{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+      }
+    }
+  }
+}
+@media (max-width: 950px) {
+  .wrapper {
+    width: 100%;
+    height: auto;
+    &__container {
+      width: 620px;
+      height: auto;
+      .container__grid{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+      }
+    }
+  }
+}
+@media (max-width: 800px) {
+  .wrapper {
+    padding-top: 170px;
+    width: 100%;
+    height: auto;
+    &__container {
+      width: 620px;
+      height: auto;
+      .container__grid{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+      }
+    }
+  }
+}
+@media (max-width: 670px) {
+  .wrapper {
+    padding-top: 170px;
+    width: 100%;
+    height: auto;
+    &__container {
+      width: 320px;
+      height: auto;
+      .container__grid{
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        gap: 0px;
+      }
+    }
+  }
+}
