--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -4,7 +4,7 @@
   padding: 20px;
   margin-top: 100px;
   &__container {
-    width: 1140px;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
     .footer__line {
@@ -69,6 +69,25 @@
           line-height: 26px;
           letter-spacing: 0em;
           text-align: left;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1150px) {
+  .wrapper {
+    width: auto;
+    padding: 0;
+    &__container {
+      width: auto;
+
+      .footer_links {
+        .column {
+          display: none;
+          &:nth-child(1) {
+            display: block;
+          }
         }
       }
     }
