--- a/src/styles/Services.module.scss
+++ b/src/styles/Services.module.scss
@@ -99,3 +99,89 @@
     }
   }
 }
+
+@media (max-width: 1900px) {
+  .wrapper {
+    width: 100%;
+    height: 800px;
+    &__container {
+      height: 100%;
+      width: 1320px;
+    }
+  }
+}
+@media (max-width: 1400px) {
+  .wrapper {
+    width: 100%;
+    height: 800px;
+    &__container {
+      height: 100%;
+      width: 1320px;
+    }
+  }
+}
+
+@media (max-width: 1350px) {
+  .wrapper {
+    width: 100%;
+    height: 600px;
+    &__container {
+      width: 1100px;
+      .container__slider {
+        width: auto;
+        .slider__arrs {
+          width: 950px;
+        }
+        .item__slider {
+          width: 250px;
+          height: 340px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1150px) {
+  .wrapper {
+    width: 100%;
+    height: 600px;
+    &__container {
+      width: 1000px;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .wrapper {
+    width: 100%;
+    height: auto;
+    &__container {
+      margin-top: 150px;
+      width: 100%;
+      height: auto;
+      padding-bottom: 50px;
+      .container__slider {
+        width: auto;
+        .slider__arrs {
+          display: none;
+        }
+        .item__slider {
+          width: 450px;
+          height: 600px;
+          h1 {
+            font-size: 25px;
+          }
+          &__photo {
+            width: 100%;
+            height: 320px;
+            background-size: contain;
+          }
+          &:nth-child(2),
+          &:nth-child(3) {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
