--- a/src/styles/Slider.module.scss
+++ b/src/styles/Slider.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   width: 100vw;
   height: 700px;
+  padding-top: 100px;
   &__container {
     height: 100%;
     width: 1820px;
@@ -34,7 +35,7 @@
         margin: 20px;
         width: 460px;
         color: white;
-        font-size: 56px;
+        font-size: clamp(0.6rem, 34vw, 3.8rem);
         font-weight: 700;
         line-height: 71px;
         letter-spacing: 0em;
@@ -84,7 +85,7 @@
     .container__countSlide {
       display: flex;
       position: absolute;
-      bottom: 100px;
+      bottom: 80px;
       gap: 10px;
       div {
         border-radius: 50%;
@@ -96,13 +97,108 @@
   }
 }
 
-// @media (max-width: 1800px) {
-//   .wrapper {
-//     &__container {
-//       width: 1500px;
-//       .container__arrs {
-//         width: 1100px;
-//       }
-//     }
-//   }
-// }
+@media (max-width: 1820px) {
+  .wrapper {
+    height: auto;
+    &__container {
+      height: 600px;
+      width: 1500px;
+      .container__arrs {
+        width: 1100px;
+      }
+    }
+  }
+}
+@media (max-width: 1500px) {
+  .wrapper {
+    height: auto;
+    &__container {
+      height: 500px;
+      width: 1200px;
+      .container__text {
+        width: 60%;
+      }
+      .container__arrs {
+        width: 1000px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .wrapper {
+    height: auto;
+    &__container {
+      height: 400px;
+      width: 900px;
+      .container__arrs {
+        width: 800px;
+        svg {
+          width: 30px;
+          height: 30px;
+        }
+      }
+      .container__text {
+        h1 {
+          height: auto;
+          margin: 0;
+          font-size: 30px;
+        }
+        h3 {
+          margin: 0;
+          height: auto;
+          font-size: 14px;
+        }
+        button {
+          margin: 0;
+          margin-top: 20px;
+          width: 200px;
+          height: 40px;
+          font-size: 11px;
+          svg {
+            width: 25px;
+            height: 25px;
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 950px) {
+  .wrapper {
+    height: 100vh;
+    width: 100vw;
+    padding-top: 0;
+    &__container {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      .container__text {
+        h1 {
+          width: auto;
+          margin: 0;
+          font-size: 50px;
+        }
+        h3{
+          font-size: 30px;
+        }
+        button{
+          width: 250px;
+          height: 90px;
+          font-size: 17px;
+          gap: 0;
+          svg{
+            width: 35px;
+            height: 35px;
+          }
+        }
+      }
+      .container__arrs {
+        display: none;
+      }
+      .container__countSlide {
+        bottom: 120px;
+      }
+    }
+  }
+}
