--- a/src/styles/SliderVars.module.scss
+++ b/src/styles/SliderVars.module.scss
@@ -39,8 +39,8 @@
           width: 46px;
           height: 46px;
           color: rgba(108, 111, 127, 1);
-          transition: .3s all;
-          &:hover{
+          transition: 0.3s all;
+          &:hover {
             cursor: pointer;
             color: rgb(95, 97, 112);
           }
@@ -109,13 +109,87 @@
               align-items: center;
               color: white;
               border: 0;
-              &:first-child{
+              &:first-child {
                 background-color: rgba(229, 141, 53, 1);
               }
-              &:last-child{
+              &:last-child {
                 border: 1px rgba(229, 141, 53, 1) solid;
                 background-color: transparent;
               }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1350px) {
+  .wrapper {
+    width: 100%;
+    height: 600px;
+    &__container {
+      width: 1000px;
+      .container__slider {
+        width: auto;
+        .slider__arrs {
+          width: 950px;
+        }
+        .slider__items {
+          width: auto;
+          .item {
+            width: 250px;
+            height: 440px;
+            &__photo {
+              width: 100%;
+              height: 200px;
+              background-repeat: no-repeat;
+              background-size: contain;
+            }
+            h1 {
+              font-size: 20px;
+              margin: 0;
+              height: auto;
+            }
+            .buttonsBar {
+              height: 80px;
+              flex-direction: column;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .wrapper {
+    width: 100%;
+    height: 600px;
+    &__container {
+      margin-top: 50px;
+      width: 100%;
+      .container__slider {
+        width: auto;
+        .slider__arrs {
+          display: none;
+        }
+        .slider__items {
+          margin-top: 20px;
+          width: auto;
+          .item {
+            width: 450px;
+            height: 600px;
+            h1{
+              font-size: 25px;
+            }
+            &__photo{
+              width: 100%;
+              height: 320px;
+              background-size: contain;
+            }
+            &:nth-child(2), &:nth-child(3){
+              display: none;
             }
           }
         }
