--- a/src/styles/SliderVars.module.scss
+++ b/src/styles/SliderVars.module.scss
@@ -180,17 +180,43 @@
           .item {
             width: 450px;
             height: 600px;
-            h1{
+            h1 {
               font-size: 25px;
             }
-            &__photo{
+            &__photo {
               width: 100%;
               height: 320px;
               background-size: contain;
             }
-            &:nth-child(2), &:nth-child(3){
+            &:nth-child(2),
+            &:nth-child(3) {
               display: none;
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .wrapper {
+    width: 100%;
+    height: 600px;
+    &__container {
+      margin-top: 50px;
+      width: 100%;
+      .container__slider {
+        width: auto;
+        .slider__arrs {
+          display: none;
+        }
+        .slider__items {
+          margin-top: 20px;
+          width: auto;
+          .item {
+            width: 400px;
+            height: 600px;
           }
         }
       }
